--- a/travis.yml
+++ b/travis.yml
@@ -1,25 +1,70 @@
-language: android
-android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
+branches: # Travis will get triggered when code is committed to the branches listed below
+  only:
+  - master
+  - beta
+  - development
+language: node_js 
+node_js:
+  - "7.1"
+sudo: false
+matrix: # A matrix is used to split the iOS and Android deployments as each has a different set of configurations
+  include:
+    #
+    # iOS configuration needed to build the app
+    #
 
-    # The BuildTools version used by your project
-    - build-tools-26.0.2
+    #
+    # ANDROID configuration needed to build the app
+    #
+    - language: android
+      os: linux # OS used to build the app. Android builds can be done on Linux, Mac or Windows. Linux is used here as it is lightweight
+      jdk: oraclejdk8 # JDK version required
+      before_cache: # Will ensure cache is removed
+        - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+        - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+      sudo: required
+      node_js: false
+      before_install:
+        - nvm install 7 # Installing node version manager
+        - travis_retry curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+        - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+        - travis_retry sudo apt-get update -qq
+        - travis_retry sudo apt-get install -y -qq yarn
+        - echo -e "machine github.com\n login $CI_USER_TOKEN" >> ~/.netrc # Logging into Github
+        - openssl aes-256-cbc -K $encrypted_cbd75dcaf496_key -iv $encrypted_cbd75dcaf496_iv
+          -in StaffConnect.jks.enc -out StaffConnect.jks -d
+        - sudo apt-get install ruby-dev
+        - gem install fastlane -v 2.93.1 -NV
+        - npm install -g cordova ionic
+        - npm install -D @ionic/v1-toolkit
+      install:
+        - yarn
+      android:
+        components:
+        # Uncomment the lines below if you want to
+        # use the latest revision of Android SDK Tools
+        # - tools
+        # - platform-tools
 
-    # The SDK version used to compile your project
-    - android-26
+        # The BuildTools version used by your project
+        - build-tools-26.0.2
 
-    # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-26
+        # The SDK version used to compile your project
+        - android-26
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-26
-    - sys-img-armeabi-v7a-android-17
-    
+        # Additional components
+        - extra-google-google_play_services
+        - extra-google-m2repository
+        - extra-android-m2repository
+        - addon-google_apis-google-26
+
+        # Specify at least one system image,
+        # if you need to run emulator(s) during your tests
+        - sys-img-armeabi-v7a-android-26
+        - sys-img-armeabi-v7a-android-17
+      script:
+        - export PATH=/usr/local/android-sdk/build-tools/26:$PATH  # Exporting android sdk path so it can be used by Fastlane when building
+        - npm install
+        - chmod -R u+x . # Ensuring folders have read writes
+        - cordova platform add android # Specifiying the version and installing the Android platform
+
